--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
     <base href="/" />
     <title>Angular 10 - JWT Authentication Tutorial & Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- bootstrap css -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5mnnydr-3HjuPTwkoNmVUHAYy77CVSmQ&libraries=places"></script>
 </head>
 <body>
     <app>Loading...</app>
